$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-31 (opened October 3, 2009)

	* linestack: passes "..." to plot(), handles missing names.
	
Version 1.16-30 (closed October 3, 2009) 

	* manual pages (Rd files) were run through aspell. With this, an
	error in an argument choice was corrected also in
	plot.nestedtemp function.

	* meandist: plot method has a new alternative of drawing
	histograms (van Sickle 1997) as an alternative to dendrograms. A
	histogram connects groups at theri within-cluster dissimilarity
	level to the average between-cluster dissimilarity.

	* oecosimu: gained new keyword 'alternative' for "two.sided",
	"less" and "greater" one-sided tests.
	
	* oecosimu: tied values in simulations and observed statistics
	treated more correctly. 
	
	* oecosimu: if all simulations were constant, their sd became
	zero, and z became NaN. Now z = 0 for these cases. A response to
	the query of Martin Kopecky at the vegan-help forum in R-Forge.

	* densitplot.oecosimu: panels keep the order of statistics. The
	panels were ordered alphabetically, but the vertical line for the
	observed statistic was in the original order (and thus often in
	the wrong panel).

	* calibrate: is now a a generic function and has a new method for
	the 'ordisurf' object in addition to the old 'cca' method.

	* FIXED BUG in cca, rda & capscale interpretation of
	formulae. This was introduced in rev 972 (Sep 1, 2009), and fixed
	in rev 1011 (Sep 18, 2009). Basically, all evaluation of 'subset'
	and 'na.action' is done after extracting the model frames with
	proven methods so that the first half of 'ordiParseFormula' is
	more similar to pre-972 versions. Function 'ordiParseFormula'
	could be re-written more elegantly, but deliberately breaking it
	twice instead of breaking it once is just too much.

	* cca/rda/capscale: cca(dune ~ poly(A1, 2), dune.env)
	failed. Internal changes in 'ordiTerminfo' which now always looks